force-app/main/default/objects/Telefono__c/Telefono__c.object-meta.xml
<CustomObject>
    <label>Telefono</label>
    <nameField>
        <label>Numero de Telefono</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Telefonos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>