force-app/main/default/objects/Telefono__c/fields/Direccion_Fisica__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Fisica__c</fullName>
    <label>Dirección Fisica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>