force-app/main/default/objects/Telefono__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extension</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>