force-app/main/default/objects/Telefono__c/fields/Identificador__c.field-meta.xml
<CustomField>
    <fullName>Identificador__c</fullName>
    <label>Identificador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>