force-app/main/default/objects/Telefono__c/fields/Prospecto__c.field-meta.xml
<CustomField>
    <fullName>Prospecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospecto</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Telefonos</relationshipLabel>
    <relationshipName>Telefonos</relationshipName>
    <type>Lookup</type>
</CustomField>